--- a/public/css/main-original.css
+++ b/public/css/main-original.css
@@ -37,8 +37,8 @@ html {
 body {
   background: #fff;
   font-size: 14px;
-  font-weight: 500;
-  font-family: 'Montserrat', 'Open Sans', sans-serif;
+  font-weight: 400;
+  font-family: 'Open Sans', sans-serif;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
