--- a/public/css/main.css
+++ b/public/css/main.css
@@ -118,7 +118,6 @@ ul li, ol li {
 }
 
 .section-title-header p {
-  text: center;
   font-weight: 400;
   line-height: 26px;
   padding-bottom: 36px;
@@ -150,7 +149,6 @@ ul li, ol li {
 
 .section-subcontent {
   font-size: 16px;
-  text: center;
   font-weight: 400;
   line-height: 26px;
   padding-bottom: 36px;
@@ -187,7 +185,7 @@ ul li, ol li {
 .inner-title {
   font-size: 24px;
   font-weight: 700;
-  text-tranform: capitalize;
+  text-transform: capitalize;
 }
 
 .page-tagline {
@@ -1810,7 +1808,6 @@ a.back-to-top:hover, a.back-to-top:focus {
   padding: 30px 0;
   text-align: center;
   width: 100%;
-  webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
   -ms-transition: all 0.5s ease-out;
   -o-transition: all 0.5s ease-out;
@@ -1829,7 +1826,6 @@ a.back-to-top:hover, a.back-to-top:focus {
   -ms-transform: scale(1);
   -o-transform: scale(1);
   transform: scale(1);
-  webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
   -ms-transition: all 0.5s ease-out;
   -o-transition: all 0.5s ease-out;
@@ -1838,7 +1834,6 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 .box .icon i {
   font-size: 40px;
-  webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
   -ms-transition: all 0.5s ease-out;
   -o-transition: all 0.5s ease-out;
@@ -1850,7 +1845,6 @@ a.back-to-top:hover, a.back-to-top:focus {
   font-weight: 500;
   margin: 0;
   color: #484848;
-  webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
   -ms-transition: all 0.5s ease-out;
   -o-transition: all 0.5s ease-out;
@@ -1863,7 +1857,6 @@ a.back-to-top:hover, a.back-to-top:focus {
   font-size: 14px;
   padding: 0 0 10px;
   color: #999;
-  webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
   -ms-transition: all 0.5s ease-out;
   -o-transition: all 0.5s ease-out;
