--- a/public/css/main.css
+++ b/public/css/main.css
@@ -677,7 +677,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   padding: 3px 15px 3px;
   margin-left: 10px;
   position: relative;
-  background: #1976D2;
+  background: #dc3545;
   text-align: center;
   border-radius: 30px;
   display: inline-block;
@@ -987,8 +987,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 #hero-area-two {
-  background: url(../img/hero-area.jpg) no-repeat;
-  background-size: cover;
+  background: url(../img/background-bachecubano.png) repeat;
   color: #fff;
   overflow: hidden;
   position: relative;
@@ -1001,7 +1000,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(54, 59, 77, 0.88);
+  background: rgba(25, 118, 210, 0.95);
 }
 
 #hero-area-two .contents {
