navbar white buttons

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -732,11 +732,11 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .slicknav_btn {
-  border-color: #1976D2;
+  border-color: #ffffff;
 }
 
 .slicknav_menu .slicknav_icon-bar {
-  background: #1976D2;
+  background: #ffffff;
 }
 
 /* only small tablets */
