--- a/public/css/main.css
+++ b/public/css/main.css
@@ -751,11 +751,12 @@ footer .menu li a:hover{color:#1976d2}
 .panel-default .panel-heading a:after{font-family:LineIcons;content:"\e9d6";position:absolute;left:0;color:#1976d2;top:50%;line-height:1;padding:0 5px;margin-top:-7px}
 .panel-default .panel-heading .collapsed:after{content:"\e9bc"}
 .panel-default .panel-collapse .panel-body{padding:15px 30px;background-color:#fff;border:1px solid #ccc}
-.counter-section{background:url(../img/background/counter-back1.jpg);overflow:hidden;position:relative}
+.counter-section{background:url(../img/background/background-bachecubano.png) repeat;overflow:hidden;position:relative}
+.counter-section .overlay{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(25,118,210,.95)}
 .counter-section:before{content:'';position:absolute;top:0;bottom:0;width:100%;height:100%;background:rgba(0,0,0,.5)}
 .counter-section .counter{padding:30px 0}
 .counter-section .counter .icon{margin-bottom:30px}
-.counter-section .counter .icon i{font-size:60px;color:#1976d2}
+.counter-section .counter .icon i{font-size:60px;color:#fff}
 .counter-section .counter .counterUp{color:#fff;font-size:42px;font-weight:700;margin-bottom:10px}
 .counter-section .counter p{font-size:18px;color:#fff;font-weight:400}
 .img-box{display:inline-block;position:relative;width:100%;overflow:hidden;z-index:90;margin:10px 0;border-radius:3px}
