--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -52,7 +52,7 @@ a.back-to-top:focus,a.back-to-top:hover{text-decoration:none}
 }
 .section-padding{padding:60px 0}
 .page-header{padding:115px 0 45px;position:relative}
-.page-header:before{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(54,59,77,.88)}
+.page-header:before{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:#1976d2}
 .page-header .breadcrumb-wrapper{text-align:center}
 .page-header .breadcrumb-wrapper .product-title{font-size:30px;line-height:38px;font-weight:700;letter-spacing:1px;color:#fff}
 .page-header .breadcrumb-wrapper .breadcrumb{font-size:14px;color:#1976d2;border-radius:0;background:0 0;padding:5px 0;z-index:1}
@@ -126,12 +126,6 @@ to{opacity:1}
 .slicknav_nav .active a{background:#e91e63;color:#fff}
 .slicknav_nav .dropdown li a.active{background:#f5f5f5;color:#e91e63}
 }
-#hero-area{background:url(../img/hero-area.jpg) no-repeat;background-size:cover;color:#fff;overflow:hidden;position:relative}
-#hero-area .overlay{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(54,59,77,.88)}
-#hero-area .contents{padding:160px 0 210px}
-#hero-area .contents .head-title{color:#fff;font-size:50px;font-weight:700;text-transform:uppercase;margin-bottom:15px}
-#hero-area .contents span.year{color:#1976d2}
-#hero-area .contents p{font-size:16px;color:#fff;font-weight:400;line-height:26px}
 .search-bar{margin-top:40px}
 .search-bar .search-form{width:100%;float:left}
 .search-bar .search-inner{background:#fff;overflow:hidden;border-radius:50px}
@@ -150,11 +144,11 @@ to{opacity:1}
 .search-bar .btn-common{top:15px;right:15px;padding:0;z-index:2;width:157px;border-radius:50px;border:none;cursor:pointer;line-height:50px;text-align:center;position:absolute;font-weight:700;letter-spacing:.5px;text-transform:uppercase;transition:all .4s ease-in-out;-moz-transition:all .4s ease-in-out;-webkit-transition:all .4s ease-in-out;-o-transition:all .4s ease-in-out}
 .search-bar .btn-common i{font-size:20px;vertical-align:middle}
 .search-button{background:#484848;padding-bottom:40px}
-#hero-area-two{background:url(../img/background-bachecubano.png) repeat;color:#fff;overflow:hidden;position:relative}
-#hero-area-two .overlay{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(25,118,210,.95)}
-#hero-area-two .contents{padding:160px 0 170px}
-#hero-area-two .contents .head-title{color:#fff;font-size:42px;font-weight:500;line-height:52px;margin-bottom:20px}
-#hero-area-two .contents p{font-size:15px;color:#fff;font-weight:400;line-height:26px;margin:0 0 50px 0}
+#hero-area{background:url(../img/background-bachecubano.png) repeat;color:#fff;overflow:hidden;position:relative}
+#hero-area .overlay{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(25,118,210,.95)}
+#hero-area .contents{padding:160px 0 170px}
+#hero-area .contents .head-title{color:#fff;font-size:42px;font-weight:500;line-height:52px;margin-bottom:20px}
+#hero-area .contents p{font-size:15px;color:#fff;font-weight:400;line-height:26px;margin:0 0 50px 0}
 .search-two{margin-bottom:30px}
 .search-two .search-inner{padding:5px;border-radius:3px;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;background:#fff}
 .search-two .search-inner>.row{margin:0}
