--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -205,7 +205,7 @@ to{opacity:1}
 .featured-box .feature-content h4 a:hover{color:#1976d2}
 .featured-box .feature-content span{margin-bottom:10px;display:block;font-size:13px;color:#999}
 .featured-box .feature-content ul.address{margin-bottom:10px;display:inline-block}
-.featured-box .feature-content ul.address li{float:left;width:50%;line-height:30px;color:#999}
+.featured-box .feature-content ul.address li{float:left;line-height:30px;color:#999}
 .featured-box .feature-content ul.address li i{margin-right:5px}
 .featured-box .feature-content ul.address li a{color:#999}
 .featured-box .feature-content ul.address li a:hover{color:#1976d2}
