--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -274,6 +274,8 @@ to{opacity:1}
 .category-box .icon{text-align:center;position:absolute;top:-25px;margin:0 auto;width:100%}
 .category-box .icon i{display:inline-block;font-size:22px;background:#1976d2;width:52px;height:52px;color:#fff;line-height:48px;box-shadow:3px 6px 6px rgba(0,0,0,.25)}
 .category-box .category-header{width:100%;display:inline-block;text-align:center;padding:40px 15px 20px;border-bottom:1px solid #eee;-webkit-transition:all .2s linear;-moz-transition:all .2s linear;-ms-transition:all .2s linear;-o-transition:all .2s linear;transition:all .2s linear}
+.category-box .category-header h2{font-size:16px;font-weight:500;margin-top:5px;margin-bottom:0;color:#333}
+.category-box .category-header h2:hover{color:#1976d2}
 .category-box .category-header h4{font-size:14px;font-weight:500;margin-top:5px;margin-bottom:0;color:#333}
 .category-box .category-header h4:hover{color:#1976d2}
 .category-box .category-content{margin:0;padding:15px}
