--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -631,8 +631,8 @@ blockquote{border-left:none;padding:15px;line-height:36px}
 #sidebar .tagcloud a:hover{color:#1976d2}
 #sidebar .add-box{padding:20px}
 #sidebar .add-box img{width:100%}
-#conatiner-map{width:100%;height:480px}
-#google-map-area{padding-top:60px;position:relative}
+#container-map{width:100%;height:480px}
+#google-map-area{position:relative}
 #google-map-area .container-fluid{padding-left:0;padding-right:0}
 #content{position:relative}
 #content .contact-form,#content .information{margin-top:40px}
