Several UI Improvements

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -772,3 +772,4 @@ footer .menu li a:hover{color:#1976d2}
 .error-content .description{text-align:center;color:#999}
 .error-content .description a{color:#55acee}
 .error-content .description a:hover{color:#1976d2}
+.slicknav_menu {background: transparent;}
