--- a/public_html/css/responsive.css
+++ b/public_html/css/responsive.css
@@ -88,6 +88,8 @@ footer .footer-Content .footer-logo img{width:60%}
 .futere-ad-widget .ctl-content-wrapper .ctl-content p{font-size:13px}
 .blog-post-item{margin-bottom:30px}
 #about .intro-title{font-size:16px;line-height:30px}
+.page-header .breadcrumb-wrapper .product-title{font-weight: 500;}
+.page-header{padding: 80px 0 40px;}
 }
 @media (max-width:767px){
 .section-title{font-size:15px}
