--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -774,3 +774,7 @@ footer .menu li a:hover{color:#1976d2}
 .error-content .description a:hover{color:#1976d2}
 .slicknav_menu{background:0 0}
 .affix{position:fixed;top:0;left:0;width:100%;z-index:9999;display:none;margin-top:100px}
+.image_outer_container{margin-top:auto;margin-bottom:auto;border-radius:50%;position:relative}
+.image_inner_container{border-radius:50%;padding:5px;background:#bbdefb;background:-webkit-linear-gradient(to bottom,#1976d2,#2196f3,#bbdefb);background:linear-gradient(to bottom,#1976d2,#2196f3,#bbdefb)}
+.image_inner_container img{height:150px;width:150px;border-radius:50%;border:2px solid #fff}
+.image_outer_container .green_icon{background-color:#4cd137;position:absolute;right:20px;bottom:10px;height:20px;width:20px;border:2.5px solid #fff;border-radius:50%}
