Messenger native app share

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -371,7 +371,7 @@ to{opacity:1}
 .details-box .ads-btn a{margin-right:5px}
 .details-box .ads-btn a i{margin-right:5px}
 .details-box .ads-btn .btn-reply{background:#0d79bf}
-.social-link a{display:inline-block;color:#fff;margin-right:5px;border-radius:4px;background:#fafafa;width:32px;height:32px;line-height:32px;text-align:center}
+.social-link a{display:inline-block;color:#fff;border-radius:4px;background:#fafafa;width:32px;height:32px;line-height:32px;text-align:center}
 .social-link .twitter{background:#55acee}
 .social-link .facebook{background:#3b5998}
 .social-link .google{background:#dd4b39}
