--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -142,7 +142,7 @@ to{opacity:1}
 .search-bar .btn-common{top:15px;right:15px;padding:0;z-index:2;width:157px;border-radius:50px;border:none;cursor:pointer;line-height:50px;text-align:center;position:absolute;font-weight:700;letter-spacing:.5px;text-transform:uppercase;transition:all .4s ease-in-out;-moz-transition:all .4s ease-in-out;-webkit-transition:all .4s ease-in-out;-o-transition:all .4s ease-in-out}
 .search-bar .btn-common i{font-size:20px;vertical-align:middle}
 .search-button{background:#484848;padding-bottom:40px}
-#hero-area{background:url(../img/background-bachecubano.png) repeat;color:#fff;overflow:hidden;position:relative}
+#hero-area{background:url(img/background-bachecubano.png) repeat;color:#fff;overflow:hidden;position:relative}
 #hero-area .overlay{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(25,118,210,.95)}
 #hero-area .contents{padding:160px 0 170px}
 #hero-area .contents .head-title{color:#fff;font-size:42px;font-weight:500;line-height:52px;margin-bottom:20px}
@@ -216,7 +216,7 @@ to{opacity:1}
 .featured-box .feature-content .listing-bottom .btn-verified:hover i{color:#fff}
 .featured-lis{background:#fafafa}
 .product-item{background:#fff}
-.product-item .carousel-thumb{display:block;position:relative;z-index:99;overflow:hidden;-webkit-transition:all .4s ease;-moz-transition:all .4s ease;-ms-transition:all .4s ease;-o-transition:all .4s ease;transition:all .4s ease}
+.product-item .carousel-thumb{display:block;position:relative;z-index:99;overflow:hidden;-webkit-transition:all .4s ease;-moz-transition:all .4s ease;-ms-transition:all .4s ease;-o-transition:all .4s ease;transition:all .4s ease;max-height:202px}
 .product-item .carousel-thumb .overlay{position:absolute;background-color:rgba(255,255,255,.4);text-align:center;top:0;left:0;z-index:999;bottom:-1px;right:0;opacity:0;-webkit-transition:all .4s ease;-moz-transition:all .4s ease;-ms-transition:all .4s ease;-o-transition:all .4s ease;transition:all .4s ease}
 .product-item .carousel-thumb .btn-product a{padding:5px 18px;border-radius:20px;left:14px;font-weight:700;position:absolute;top:12px;z-index:999}
 .product-item .carousel-thumb:hover{border-color:#1976d2}
@@ -745,7 +745,7 @@ footer .menu li a:hover{color:#1976d2}
 .panel-default .panel-heading a:after{font-family:LineIcons;content:"\e9d6";position:absolute;left:0;color:#1976d2;top:50%;line-height:1;padding:0 5px;margin-top:-7px}
 .panel-default .panel-heading .collapsed:after{content:"\e9bc"}
 .panel-default .panel-collapse .panel-body{padding:15px 30px;background-color:#fff;border:1px solid #ccc}
-.counter-section{background:url(../img/background/background-bachecubano.png) repeat;overflow:hidden;position:relative}
+.counter-section{background:url(img/background/background-bachecubano.png) repeat;overflow:hidden;position:relative}
 .counter-section .overlay{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(25,118,210,.95)}
 .counter-section:before{content:'';position:absolute;top:0;bottom:0;width:100%;height:100%;background:rgba(0,0,0,.5)}
 .counter-section .counter{padding:30px 0}
