--- a/public_html/css/main2.css
+++ b/public_html/css/main2.css
@@ -141,7 +141,7 @@ to{opacity:1}
 .search-bar .btn-common{top:15px;right:15px;padding:0;z-index:2;width:157px;border-radius:50px;border:none;cursor:pointer;line-height:50px;text-align:center;position:absolute;font-weight:700;letter-spacing:.5px;text-transform:uppercase;transition:all .4s ease-in-out;-moz-transition:all .4s ease-in-out;-webkit-transition:all .4s ease-in-out;-o-transition:all .4s ease-in-out}
 .search-bar .btn-common i{font-size:20px;vertical-align:middle}
 .search-button{background:#484848;padding-bottom:40px}
-#hero-area{background:url('https://www.bachecubano.com/img/background-bachecubano.png') repeat;color:#fff;overflow:hidden;position:relative}
+#hero-area{background:url(https://www.bachecubano.com/img/background-bachecubano.png) repeat;color:#fff;overflow:hidden;position:relative}
 #hero-area .overlay{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(25,118,210,.95)}
 #hero-area .contents{padding:160px 0 170px}
 #hero-area .contents .head-title{color:#fff;font-size:42px;font-weight:500;line-height:52px;margin-bottom:20px}
@@ -777,3 +777,4 @@ footer .menu li a:hover{color:#1976d2}
 .image_inner_container img{height:150px;width:150px;border-radius:50%;border:2px solid #fff}
 .image_outer_container .green_icon{background-color:#4cd137;position:absolute;right:20px;bottom:10px;height:20px;width:20px;border:2.5px solid #fff;border-radius:50%}
 .img-fluid{width:100%}
+.highlight{background: linear-gradient(180deg,rgba(255,255,255,0) 50%,#fffc30 50%);}
